<resources>
    <string name="app_name">Mtd</string>
    <string name="title_items_list">Items</string>
    <string name="title_sync">Sync</string>
    <string name="server_socket_hint">example.com:55995</string>
    <string name="server_socket_prompt">Server Socket Address (ADDRESS:PORT):</string>
    <string name="password_prompt">Encryption Password:</string>
    <string name="password_hint">Input a strong password</string>
    <string name="shown_weekday_spinner_prompt">Select shown weekday</string>
    <string name="add_new_item">Add new item</string>
    <string name="select_item_weekday">Select weekday</string>
    <string name="item_body_prompt">Input item body</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="syncing">Synchronizing…</string>
    <string name="wait_for_sync">Please wait for the sync to finish.</string>
    <string name="sync_failed">Sync failed</string>
    <string name="sync_successful">Sync completed!</string>
    <string name="ok">OK</string>
    <string name="remove_item">Remove item</string>
    <string name="remove_confirm">Are you sure you want to remove the item?</string>
    <string name="cancel">Cancel</string>
    <string name="select_item_type_prompt">Select item type</string>
    <string name="todo">Todo</string>
    <string name="task">Task</string>
    <string name="add_new_todo">Add new todo</string>
    <string name="add_new_task">Add new task</string>
    <string name="licenses">Licenses</string>
    <string name="rust_licenses">3rd Party Rust Licenses</string>
    <string name="android_licenses">3rd Party Android Licenses</string>
    <string name="app_license">"Copyright © 2022 Windore\n\nMtd is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\nMtd is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License along with this program. If not, see https://www.gnu.org/licenses/."</string>
</resources>