<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
            android:id="@+id/edit_text_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/item_body_prompt"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:textColorHint="#757575" />

    <CheckBox
            android:text="@string/monday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/check_box_mon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_body" />

    <CheckBox
            android:text="@string/tuesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/check_box_tue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/check_box_mon" />

    <CheckBox
            android:text="@string/wednesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/check_box_wed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/check_box_tue" />

    <CheckBox
            android:text="@string/thursday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/check_box_thu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/check_box_wed" />

    <CheckBox
            android:text="@string/friday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/check_box_fri"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/check_box_thu" />

    <CheckBox
            android:text="@string/saturday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/check_box_sat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/check_box_fri" />

    <CheckBox
            android:text="@string/sunday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/check_box_sun"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/check_box_sat" />

</androidx.constraintlayout.widget.ConstraintLayout>