<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LicensesActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/license_activity_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary_color"/>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
            android:text="@string/app_license"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/license_tv"
            app:layout_constraintTop_toBottomOf="@id/license_activity_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

    <Button
            android:text="@string/rust_licenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/secondary_color"
            android:textColor="@color/color_on_secondary"
            android:id="@+id/rust_licenses_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/license_tv"
            android:layout_marginTop="16dp" />

    <Button
            android:text="@string/android_licenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/secondary_color"
            android:textColor="@color/color_on_secondary"
            android:id="@+id/android_licenses_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rust_licenses_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>